--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,24 @@
-asgiref==3.2.7
+asgiref==3.3.4
 boto3==1.13.12
 botocore==1.16.12
+cycler==0.10.0
+decorator==4.4.2
 dj-database-url==0.5.0
-Django==3.0.14
+Django==3.2.4
 django-heroku==0.3.1
 django-storages==1.9.1
 django-summernote==0.8.11.6
 docutils==0.15.2
 gunicorn==20.0.4
 jmespath==0.10.0
+kiwisolver==1.3.1
+matplotlib==3.3.3
+networkx==2.5
+numpy==1.19.4
 Pillow==8.1.1
 psycopg2==2.8.5
+pygame==2.0.1
+pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2020.1
 s3transfer==0.3.3
